Update for Jan 2019

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 </head>
 <body id="top">
 
-<div class="pt5 pt6-l pb4 center ph3 ph4-m ph0-l mw7 black font-primary">
+<div class="pt5 pb4 center ph3 ph4-m ph0-l mw7 black font-primary">
 
   <!-- Intro -->
   <article class="mb4 pb3 lh-copy f5">
@@ -115,22 +115,30 @@
       <div class="flex items-center justify-center mv2 mh2">
         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24"><path fill="#777777" d="M12 0c-4.198 0-8 3.403-8 7.602 0 4.198 3.469 9.21 8 16.398 4.531-7.188 8-12.2 8-16.398 0-4.199-3.801-7.602-8-7.602zm0 11c-1.657 0-3-1.343-3-3s1.343-3 3-3 3 1.343 3 3-1.343 3-3 3z"/></svg>
         <div class="ml2">
-          Rizal,&nbsp;Philippines
+          Davao City,&nbsp;Philippines
         </div>
       </div>
     </div>
 
-    <p class="mb4 tj">
-      <strong>Christopher Regner</strong> is a self-taught front-end developer at <a href="http://heyyou.com.au/" target="_blank" class="hover-black light-purple no-underline">Hey You</a> <span class="f6 mid-gray ttl">(React.js, Redux, and JavaScript)</span>. He has 3 years of relevant experience — more than 2 years as a full-stack developer in a failed startup <span class="f6 mid-gray ttl">(Node.js, Meteor.js, Angular.js, PHP, WordPress)</span>, and about 9 months as a front-end developer at <a href="https://www.straightarrow.com.ph/" target="_blank" class="hover-black light-purple no-underline">StraightArrow Corp</a> <span class="f6 mid-gray ttl">(HTML &amp; CSS, email development)</span>. He is passionate about learning and is looking to acquire/improve more skills such as node.js, machine learning, and cryptocurrency.
+    <p class="f5 mb2 tj">
+      <strong>Christopher Regner</strong> is a freelance developer with more than 4 years of experience whose main expertise is JavaScript and React (JS and Native), capable of working on both front-end and the back-end. His past accomplishments include:
     </p>
 
-    <p class="tj">
-      He is looking for <strong>part-time</strong> projects preferrably focusing on <strong>React.js</strong> and/or <strong>JavaScript</strong> <span class="f6 mid-gray ttl">(contractual, home-based)</span>. His current expertise is front-end, but he's also confident that he can handle entry to mid-level back-end tasks.
+    <ul class="f5 ml2 ml3-ns mb4 pl3 pl4-ns tj">
+      <li class="pl2-ns">Development, launching, and maintainance of <a href="http://heyyou.com.au/" target="_blank" class="hover-black light-purple no-underline">Hey You</a> web app, a popular Australian food ordering app (single page app made with React)</li>
+      <li class="pl2-ns">Maintenance and revamp of a Point of Sale (POS) React Native app (also at Hey You)</li>
+      <li class="pl2-ns">Working on more advanced front-end projects such as customized Google Maps tool, data charts/graphs app, and HTML5 games</li>
+    </ul>
+
+    <p class="f5 mb4 tj">Chris considers himself a conscientious and perfectionist professional, taking quality into the heart. He finds pleasure working on projects involving technologies and areas that he is yet to learn or master.</p>
+
+    <p class="f5 tj">
+      He is currently looking for freelance projects, preferrably <strong>short term</strong> (3 months or less).
     </p>
   </article>
 
   <!-- Call to Actions -->
-  <div class="_cta flex flex-wrap justify-center mb5 pb4">
+  <div class="_cta flex flex-wrap justify-center mb6">
     <div class="pv1 pr1 _ph2-l w-50 _w-auto-l">
       <a href="https://github.com/chrisregner" class="db ba bw1 pv1 ph2 w-100 w-auto-l f5 lh-solid no-underline ttu animated tc tracked b--black bg-white hover-bg-black black hover-white" target="_blank">
         GitHub
@@ -154,81 +162,34 @@
   </div>
 
   <!-- Skills -->
-  <section class="mb5 pb4">
+  <section class="mb6">
     <h2 class="f4 mb4 pb2 normal ttu tracked tc">Skills</h2>
     <div class="na3 flex flex-wrap f6 lh-copy">
       <div class="w-100 w-50-ns">
-        <section class="pa3">
-          <h3 class="mb1 f6 ttl mid-gray normal">advanced</h3>
-          <div class="indent-next-line">
-            React.js &amp; Redux <span class="f7 mid-gray">(Redux-Saga, Redux-Actions, Redux-Thunk, styled-jsx, styled-components)</span>
-          </div>
-          <div class="intent-next-line">
-            HTML &amp; CSS <span class="f7 mid-gray">(Bootstrap, Tachyons)</span>
-          </div>
-          <div class="indent-next-line">
-            JavaScript <span class="f7 mid-gray">(ECMAScript, DOM, async programming, JQuery)</span>
-          </div>
-        </section>
-
-        <section class="pa3">
-          <h3 class="mb1 f6 ttl mid-gray normal">intermediate</h3>
-          <div class="indent-next-line">
-            Test-driven Development <span class="f7 mid-gray">(Mocha, Chai, Enzyme, Testdouble.js)</span>
-          </div>
-          <div class="indent-next-line">
-            Functional Programming <span class="f7 mid-gray">(Ramda, Immutable.js, Recompose)</span>
-          </div>
-          <div class="indent-next-line">
-            JS Build Tools <span class="f7 mid-gray">(Webpack, Babel, PostCSS, CSS Modules, Gulp, Grunt, ESlint)</span>
-          </div>
-          <div class="indent-next-line">
-            Version Control System <span class="f7 mid-gray">(Git)</span>
-          </div>
-          <div class="indent-next-line">
-            Component/CSS Libraries <span class="f7 mid-gray">(Material UI, Ant Design)</span>
-          </div>
-          <div class="indent-next-line">
-            Web Accessibility
-          </div>
+        <section class="ph3">
+          <div class="indent-next-line pv1"><span class="underline">React & Redux</span> <span class="f7 mid-gray">Next.js, Redux-Saga, -Actions,  Thunk</span></div>
+          <div class="indent-next-line pv1"><span class="underline">React Native</span> <span class="f7 mid-gray">working on ejected proj. (Android Studio / Xcode)</span></div>
+          <div class="indent-next-line pv1"><span class="underline">HTML5 & CSS</span> <span class="f7 mid-gray">Flexboxes, Canvas, SCSS/LESS</span></div>
+          <div class="indent-next-line pv1"><span class="underline">JavaScript</span> <span class="f7 mid-gray">ECMAScript, DOM, asynchronous prog., Jquery</span></div>
+          <div class="indent-next-line pv1">Node.js <span class="f7 mid-gray">Express, Server-Side Rendering (React)</span></div>
+          <div class="indent-next-line pv1">Typescript</div>
+          <div class="indent-next-line pv1">Data Visualization <span class="f7 mid-gray">D3.js, Google Maps customization</span></div>
+          <div class="indent-next-line pv1">Basic Web Design</div>
+          <div class="indent-next-line pv1">Basic CI/CD and Deployment Amazon Web Services</div>
         </section>
       </div>
 
       <div class="w-100 w-50-ns">
-        <section class="pa3">
-          <h3 class="mb1 f6 ttl mid-gray normal">can relearn / familiar</h3>
-          Node.js <br />
-          Meteor.js <br />
-          <div class="indent-next-line">
-            WordPress &amp; PHP <span class="f7 mid-gray">(theme from scratch)</span>
-          </div>
-          <div class="indent-next-line">
-            CSS Precompiler <span class="f7 mid-gray">(SASS, LESS)</span>
-          </div>
-          <div class="indent-next-line">
-            CSS Methodologies <span class="f7 mid-gray">(SMACSS, BEM, Functional CSS)</span>
-          </div>
-        </section>
-
-        <section class="pa3">
-          <h3 class="mb1 f6 ttl mid-gray normal">basic</h3>
-          <div class="indent-next-line">
-            Data Visualization <span class="f7 mid-gray">(d3.js, SVG)</span>
-          </div>
-          Adobe Photoshop <br />
-          GraphQL/Apollo <br />
-          Web Design <br />
-          SEO best practices
-        </section>
-
-        <section class="pa3">
-          <h3 class="mb1 f6 ttl mid-gray normal">languages</h3>
-          <div class="indent-next-line">
-            English <span class="f7 mid-gray">(conversational)</span>
-          </div>
-          <div class="indent-next-line">
-            Tagalog <span class="f7 mid-gray">(first-language)</span>
-          </div>
+        <section class="ph3">
+          <div class="indent-next-line pv1">HTML5 Game Development / Canvas <span class="f7 mid-gray">Pixi.js</span></div>
+          <div class="indent-next-line pv1">JS Build Tools <span class="f7 mid-gray">Webpack, Babel, ESlint</span></div>
+          <div class="indent-next-line pv1">Functional Programming <span class="f7 mid-gray">Ramda, Immutable.js, Recompose</span></div>
+          <div class="indent-next-line pv1">Test-driven Development <span class="f7 mid-gray">Mocha, Chai, Enzyme</span></div>
+          <div class="indent-next-line pv1">Version Control System <span class="f7 mid-gray">Git</span></div>
+          <div class="indent-next-line pv1">Component Libraries <span class="f7 mid-gray">Material UI, Bootstrap, Tachyons</span></div>
+          <div class="indent-next-line pv1">Meteor.js</div>
+          <div class="indent-next-line pv1">GraphQL</div>
+          <div class="indent-next-line pv1">WordPress & PHP <span class="f7 mid-gray">theme from scratch </span></div>
         </section>
       </div>
     </div>
@@ -236,7 +197,7 @@
 
   <!-- Works -->
   <article class="center mh4 mb5 mw7">
-    <h2 class="f4 mb4 pb3 normal ttu tracked tc">Sample Works</h2>
+    <h2 class="f4 mb4 pb3 normal ttu tracked tc">DEMO PROJECTS</h2>
 
     <ul class="list pa0">
       <li class="mb5 pb3">
