--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
     <p class="f5 mb4 tj">Chris considers himself a conscientious and perfectionist professional, taking quality into the heart. He finds pleasure working on projects involving technologies and areas that he is yet to learn or master.</p>
 
     <p class="f5 tj">
-      He is currently looking for freelance projects, preferrably <strong>short term</strong> (3 months or less).
+      He is currently looking for freelance projects, preferably <strong>short term</strong> (3 months or less).
     </p>
   </article>
 
