--- a/index.html
+++ b/index.html
@@ -121,19 +121,19 @@
     </div>
 
     <p class="f5 mb2 tj">
-      <strong>Christopher Regner</strong> is a freelance developer with more than 4 years of experience whose main expertise is JavaScript and React (JS and Native), capable of working on both front-end and the back-end. His past accomplishments include:
+      <strong>Christopher Regner</strong> is a freelance developer with <strong>more than 4 years</strong> of experience whose main expertise is <strong>JavaScript</strong> and <strong>React</strong> (JS and Native), capable of working on both front-end and the back-end. His past accomplishments include:
     </p>
 
     <ul class="f5 ml2 ml3-ns mb4 pl3 pl4-ns tj">
-      <li class="pl2-ns">Development, launching, and maintainance of <a href="http://heyyou.com.au/" target="_blank" class="hover-black light-purple no-underline">Hey You</a> web app, a popular Australian food ordering app (single page app made with React)</li>
-      <li class="pl2-ns">Maintenance and revamp of a Point of Sale (POS) React Native app (also at Hey You)</li>
-      <li class="pl2-ns">Working on more advanced front-end projects such as customized Google Maps tool, data charts/graphs app, and HTML5 games</li>
+      <li class="pl2-ns">Development, launching, and maintainance of <a href="http://heyyou.com.au/" target="_blank" class="hover-black light-purple no-underline">Hey You</a> web app, <strong>a popular Australian food ordering app</strong> (single page app made with <strong>React</strong>)</li>
+      <li class="pl2-ns">Maintenance and revamp of a <strong>Point of Sale (POS) React Native app</strong> (also at Hey You)</li>
+      <li class="pl2-ns">Working on more advanced front-end projects such as <strong>customized Google Maps tool</strong>, <strong>data charts/graphs app</strong>, and <strong>HTML5 games</strong></li>
     </ul>
 
     <p class="f5 mb4 tj">Chris considers himself a conscientious and perfectionist professional, taking quality into the heart. He finds pleasure working on projects involving technologies and areas that he is yet to learn or master.</p>
 
     <p class="f5 tj">
-      He is currently looking for freelance projects, preferably <strong>short term</strong> (3 months or less).
+      He is <strong>currently looking for freelance projects</strong>, preferably short term (3 months or less).
     </p>
   </article>
 
