--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
     </p>
 
     <ul class="f5 ml2 ml3-ns mb4 pl3 pl4-ns tj">
-      <li class="pl2-ns">Development, launching, and maintainance of <a href="http://heyyou.com.au/" target="_blank" class="hover-black light-purple no-underline">Hey You</a> web app, <strong>a popular Australian food ordering app</strong> (single page app made with <strong>React</strong>)</li>
+      <li class="pl2-ns">Development, launching, and maintenance of <a href="http://heyyou.com.au/" target="_blank" class="hover-black light-purple no-underline">Hey You</a> web app, <strong>a popular Australian food ordering app</strong> (single-page app made with <strong>React</strong>)</li>
       <li class="pl2-ns">Maintenance and revamp of a <strong>Point of Sale (POS) React Native app</strong> (also at Hey You)</li>
       <li class="pl2-ns">Working on more advanced front-end projects such as <strong>customized Google Maps tool</strong>, <strong>data charts/graphs app</strong>, and <strong>HTML5 games</strong></li>
     </ul>
@@ -225,7 +225,7 @@
           <h3 class="mb2 black f3 lh-title normal">Minimal React WordPress</h3>
           <div class="mb2 mid-gray f6 lh-title ttl tracked">Personal, React.js, Redux, TDD, WordPress</div>
           <p class="f6 mb4 lh-copy">
-            A React/Redux website that gets its data from WordPress through its REST API - the means by which developers can create Single Page Applications (SPA) with WordPress. Just like most CMS, it retrieves posts by list or individually. It also allows you to filter posts by keyword or tags.
+            A React/Redux website that gets its data from WordPress through its REST API - the means by which developers can create Single-Page Applications (SPA) with WordPress. Just like most CMS, it retrieves posts by list or individually. It also allows you to filter posts by keyword or tags.
           </p>
           <div class="flex">
             <a class="ba bw1 pv1 ph2 f5 lh-solid no-underline tracked ttu animated b--black bg-white hover-bg-black black hover-white mr2 mr3-ns" href="https://github.com/chrisregner/minimal-react-wordpress" target="_blank">Source</a>
