Add new portfolio item

--- a/index.html
+++ b/index.html
@@ -197,9 +197,25 @@
 
   <!-- Works -->
   <article class="center mh4 mb5 mw7">
-    <h2 class="f4 mb4 pb3 normal ttu tracked tc">DEMO PROJECTS</h2>
+    <h2 class="f4 mb4 pb3 normal ttu tracked tc">Sample Projects</h2>
 
     <ul class="list pa0">
+      <li class="mb5 pb3">
+        <div class="ba b--light-gray mb4">
+          <img class="db" src="img/hey-you.png" alt="">
+        </div>
+        <div>
+          <h3 class="mb2 black f3 lh-title normal">Hey You</h3>
+          <div class="mb2 mid-gray f6 lh-title ttl tracked">React.js, Redux, E-Payment</div>
+          <p class="f6 mb4 lh-copy">
+            Single-page app that allows users to search venues in Australia and order ahead. Users pay through e-payment system and will be updated on the order status page (accepted, rejected, or ready for pick up). This saves users from spending time on queues as they instead can come to venues once the order is ready.
+          </p>
+          <div class="flex">
+            <a class="ba bw1 pv1 ph2 f5 lh-solid no-underline tracked ttu animated b--purple bg-purple hover-bg-white white hover-purple" href="https://heyyou.com.au/" target="_blank">Live Site</a>
+          </div>
+        </div>
+      </li>
+
       <li class="mb5 pb3">
         <div class="ba b--light-gray mb4">
           <img class="db" src="img/github-compare.png" alt="">
