--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
     <p class="f5 mb4 tj">Chris considers himself a conscientious and perfectionist professional, taking quality into the heart. He finds pleasure working on projects involving technologies and areas that he is yet to learn or master.</p>
 
     <p class="f5 tj">
-      He is <strong>currently looking for freelance projects</strong>, preferably short term (3 months or less).
+      He is <strong>currently looking for freelance projects</strong>, preferably short-term (less than 6 months).
     </p>
   </article>
 
@@ -202,11 +202,11 @@
     <ul class="list pa0">
       <li class="mb5 pb3">
         <div class="ba b--light-gray mb4">
-          <img class="db" src="img/hey-you.png" alt="">
+          <img class="db" src="img/hey-you.png" alt="Hey You">
         </div>
         <div>
           <h3 class="mb2 black f3 lh-title normal">Hey You</h3>
-          <div class="mb2 mid-gray f6 lh-title ttl tracked">React.js, Redux, E-Payment</div>
+          <div class="mb2 mid-gray f6 lh-title ttl tracked">Employment Work, React.js, Redux, E-Payment</div>
           <p class="f6 mb4 lh-copy">
             Single-page app that allows users to search venues in Australia and order ahead. Users pay through e-payment system and will be updated on the order status page (accepted, rejected, or ready for pick up). This saves users from spending time on queues as they instead can come to venues once the order is ready.
           </p>
@@ -217,12 +217,28 @@
       </li>
 
       <li class="mb5 pb3">
+        <div class="mb4 nl3 nr3">
+          <img class="db" src="img/french-lotto-winners.png" alt="Lotto Winners Listing App (Anonymous)">
+        </div>
+        <div>
+          <h3 class="mb2 black f3 lh-title normal">Lotto Winners Listing App (Anonymous)</h3>
+          <div class="mb2 mid-gray f6 lh-title ttl tracked">Freelance Work, React.js, Redux</div>
+          <p class="f6 mb4 lh-copy">
+            A web app that is being displayed from a mobile app. Lists lotto winners, shows their details, and sorts them by date or amount.
+          </p>
+          <div class="flex">
+            <a class="ba bw1 pv1 ph2 f5 lh-solid no-underline tracked ttu animated b--purple bg-purple hover-bg-white white hover-purple" href="https://heyyou.com.au/" target="_blank">Live Site</a>
+          </div>
+        </div>
+      </li>
+
+      <li class="mb5 pb3">
         <div class="ba b--light-gray mb4">
-          <img class="db" src="img/github-compare.png" alt="">
+          <img class="db" src="img/github-compare.png" alt="Github Compare">
         </div>
         <div>
           <h3 class="mb2 black f3 lh-title normal">Github Compare</h3>
-          <div class="mb2 mid-gray f6 lh-title ttl tracked">Personal, React.js, D3.js, Data-Visualization, SVG, GraphQL</div>
+          <div class="mb2 mid-gray f6 lh-title ttl tracked">Personal Work, React.js, D3.js, Data-Visualization, SVG, GraphQL</div>
           <p class="f6 mb4 lh-copy">
             App where you can search github repositories and compare their stats, such as stars and issues count, with charts (Bar, Pie, Line chart).
           </p>
@@ -235,11 +251,11 @@
 
       <li class="mb5 pb3">
         <div class="ba b--light-gray mb4">
-          <img class="db" src="img/minimal-react-wordpress.png" alt="">
+          <img class="db" src="img/minimal-react-wordpress.png" alt="Minimal React WordPress">
         </div>
         <div>
           <h3 class="mb2 black f3 lh-title normal">Minimal React WordPress</h3>
-          <div class="mb2 mid-gray f6 lh-title ttl tracked">Personal, React.js, Redux, TDD, WordPress</div>
+          <div class="mb2 mid-gray f6 lh-title ttl tracked">Personal Work, React.js, Redux, TDD, WordPress</div>
           <p class="f6 mb4 lh-copy">
             A React/Redux website that gets its data from WordPress through its REST API - the means by which developers can create Single-Page Applications (SPA) with WordPress. Just like most CMS, it retrieves posts by list or individually. It also allows you to filter posts by keyword or tags.
           </p>
@@ -252,11 +268,11 @@
 
       <li class="mb5 pb3">
         <div class="ba b--light-gray mb4">
-          <img class="db" src="img/plans-and-journals.png" alt="">
+          <img class="db" src="img/plans-and-journals.png" alt="Plans and Journals">
         </div>
         <div>
           <h3 class="mb2 black f3 lh-title normal">Plans and Journals</h3>
-          <div class="mb2 mid-gray f6 lh-title ttl tracked">Personal, React.js, Redux, TDD, Map</div>
+          <div class="mb2 mid-gray f6 lh-title ttl tracked">Personal Work, React.js, Redux, TDD, Map</div>
           <p class="f6 mb4 lh-copy">
             A web app that functions like a travel journal that allows users to make entries about the places they have been, while also doubling as planner where they can create plans and schedules. These two main features are also visualized with a map (using Google Map).
           </p>
@@ -269,11 +285,11 @@
 
       <li class="mb5 pb3">
         <div class="ba b--light-gray mb4">
-          <img class="db" src="img/daily-routines-tracker.png" alt="">
+          <img class="db" src="img/daily-routines-tracker.png" alt="Daily Routines Tracker">
         </div>
         <div>
           <h3 class="mb2 black f3 lh-title normal">Daily Routines Tracker</h3>
-          <div class="mb2 mid-gray f6 lh-title ttl tracked">Personal, React.js, Redux</div>
+          <div class="mb2 mid-gray f6 lh-title ttl tracked">Personal Work, React.js, Redux</div>
           <p class="f6 mb4 lh-copy">
             A simple web app where users can manage a list of routines/tasks and track the time being spent on each until the set goal is reached.
           </p>
